# visu

./: README.md  config.example.toml  config.toml  modbus.toml  pyproject.toml  pyrightconfig.json  requirements.txt  schemes.example.toml  schemes.toml  snmp.toml  snmptest.py
schemes.d/: cooling.toml
static/: main.js  style.css  style.js
templates/: index.html  scheme.html
tomlconfig/: __init__.py
visu/: __init__.py  __main__.py  app.py  config.py
visu/data/: __init__.py  base.py  controller.py  modbus.py  random.py  snmp.py
visu/data/bacnet/: __init__.py  app.py  config.py  module.py  tasks.py
visu/data/modbus/: config.py  module.py
visu/data/snmp/: config.py  module.py
visu/scheme/: __init__.py  config.py  controller.py
visu/static/: giraffe.js  main.js  style.css  style.js
visu/templates/: index.html  scheme.html
