[project]
name = "visu"
description = "SCADA Web application for visualization and control"
version = "1.0.0"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "tomlconfig @ git+https://github.com/JurajMarcin/tomlconfig.git@1.1.1",

    "fastapi >= 0.87.0",
    "uvicorn[standard] >= 0.19.0",
    "jinja2 >= 3.1.2",
    "websockets >= 10.4",
    "influxdb_client[async,ciso] >= 1.34.0",

    "bacpypes >= 0.18.6",
    "pymodbus[serial] >= 3.0.2",
    "pysnmplib >= 5.0.20",
]

[project.scripts]
visu = "visu:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "visu",
    "visu/data",
    "visu/data/bacnet",
    "visu/data/modbus",
    "visu/data/snmp",
    "visu/scheme",
]

[tool.setuptools.package-data]
visu = ["static/*", "templates/*"]
